kubernetes/application/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: reviewfilmes-service
  namespace: devops4devs
spec:
  selector:
    app: reviewfilmes-app
  ports:
  - port: 80
    targetPort: 8080
